<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context="androidproject.my_project.startActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/catch_ball"
        android:textSize="32sp"
        />

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp">

        <TableRow
            android:gravity = "center_vertical" >
            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/pink"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pink_point"
                android:textSize="18sp"
                android:paddingLeft="10dp"/>
        </TableRow>
        <TableRow
            android:gravity = "center_vertical"
            android:layout_marginTop="20dp">
            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/orange"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/orange_point"
                android:textSize="18sp"
                android:paddingLeft="10dp"/>
        </TableRow>
        <TableRow
            android:gravity = "center_vertical"
            android:layout_marginTop="20dp">
        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/black"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/black_point"
            android:textSize="18sp"
            android:paddingLeft="10dp" />
        </TableRow>
    </TableLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/startGame"
        android:layout_marginTop="30dp"
        android:onClick="startGame"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/setting"
        android:layout_marginTop="20dp"
        android:onClick="startSetting"
        />

</LinearLayout>
